feat: 은행 도메인 구현